tests/baselines/reference/fatarrowfunctionsOptionalArgsErrors2.errors.txt
==== tests/cases/compiler/fatarrowfunctionsOptionalArgsErrors2.ts (17 errors) ====
    var tt1 = (a, (b, c)) => a+b+c;
                          ~~
!!! error TS1005: ';' expected.
               ~
!!! error TS2304: Cannot find name 'a'.
                   ~
!!! error TS2304: Cannot find name 'b'.
                      ~
!!! error TS2304: Cannot find name 'c'.
                             ~
!!! error TS2304: Cannot find name 'a'.
                               ~
!!! error TS2304: Cannot find name 'b'.
                                 ~
!!! error TS2304: Cannot find name 'c'.
    var tt2 = ((a), b, c) => a+b+c;
                          ~~
!!! error TS1005: ';' expected.
                ~
!!! error TS2304: Cannot find name 'a'.
                    ~
!!! error TS2304: Cannot find name 'b'.
                       ~
!!! error TS2304: Cannot find name 'c'.
                             ~
!!! error TS2304: Cannot find name 'a'.
                               ~
!!! error TS2304: Cannot find name 'b'.
                                 ~
!!! error TS2304: Cannot find name 'c'.
    
    var tt3 = ((a)) => a;
                    ~~
!!! error TS1005: ';' expected.
                ~
!!! error TS2304: Cannot find name 'a'.
                       ~
!!! error TS2304: Cannot find name 'a'.